--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@
 {
 	margin: 0;
 	padding: 0;
-	font-family: 'Microsoft Yahei';
 }
 
 a {  text-decoration: none;  }
@@ -81,6 +80,37 @@ header
 #weather_info
 {
 	color: #c3ecff;
+}
+
+.weather_question
+{
+	display: inline-block;
+	height: 50px;
+	font-size: 12px;
+	color: #a1dbff;
+	position: relative;
+}
+
+.weather_question .question_info
+{
+	display: none;
+	width: 310px;
+	height: 200px;
+	line-height: 2em;
+	padding: 20px;
+	background: #01b1ff;
+	color: #fff;
+	/*-webkit-border-bottom-left-radius: 10px;*/
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	/*-webkit-border-bottom-right-radius: 10px;*/
+	font-size: 16px;
+	-webkit-box-shadow: 0 4px 6px #fff;
+	-moz-box-shadow: 0 4px 6px #fff;
+	box-shadow: 0 4px 6px #fff;
+	position: absolute;
+	left: -280px;
+	top: 48px;
 }
 
 /*header end*/
@@ -184,6 +214,13 @@ footer
 	height: 100px;
 	background: #333;
 	position: relative;
+}
+
+footer .temp
+{
+	padding: 20px;
+	color: #fff;
+	font-size: 14px;
 }
 
 /*footer end*/
