--- a/css/icon-font/iconfont.css
+++ b/css/icon-font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1478237334574'); /* IE9*/
-  src: url('iconfont.eot?t=1478237334574#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1478237334574') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1478237334574') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1478237334574#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1478596217482'); /* IE9*/
+  src: url('iconfont.eot?t=1478596217482#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1478596217482') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1478596217482') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1478596217482#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -16,15 +16,29 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-tingzhi:before { content: "\f0068"; }
+
 .icon-geren:before { content: "\e600"; }
 
 .icon-guanbi:before { content: "\e603"; }
+
+.icon-zanting:before { content: "\e738"; }
 
 .icon-fanhui:before { content: "\e61d"; }
 
 .icon-xiangmu:before { content: "\e67a"; }
 
+.icon-bofang:before { content: "\e660"; }
+
 .icon-cube:before { content: "\e680"; }
+
+.icon-shangyiqu:before { content: "\e6e1"; }
+
+.icon-xiayiqu:before { content: "\e718"; }
+
+.icon-jindu3:before { content: "\e61c"; }
+
+.icon-jindutiao1:before { content: "\e613"; }
 
 .icon-biji-copy:before { content: "\e605"; }
 
