--- a/css/header&footer.css
+++ b/css/header&footer.css
@@ -51,7 +51,7 @@ header
 {
     width: 100%;
     height: 50px;
-    background: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .5);
     /* -webkit-box-shadow: 0 0 10px #fff;
     -moz-box-shadow: 0 0 10px #fff;
     box-shadow: 0 0 10px #fff; */
@@ -198,8 +198,10 @@ footer
 {
     height: 40px;
     line-height: 40px;
-    background: #333;
-    position: relative;
+    position: fixed;
+    bottom: 0;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, .5);
 }
 
 footer .temp
