--- a/css/index.css
+++ b/css/index.css
@@ -1,105 +1,112 @@
 *
-        {
-            padding: 0;
-            margin: 0;
-        }
+{
+    padding: 0;
+    margin: 0;
+}
 
-        .clr::before,
-        .clr::after
-        {
-            content: '';
-            display: block;
-            width: 0;
-            clear: both;
-            visibility: hidden;
-        }
+.clr::before,
+.clr::after
+{
+    content: '';
+    display: block;
+    width: 0;
+    clear: both;
+    visibility: hidden;
+}
 
-        body
-        {
-            background-image: url(../img/bg-easter-egg.jpg);
-            background-color: #323A45;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
+body
+{
+    background-image: url(../img/bg-easter-egg.jpg);
+    background-color: #323A45;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 
-        .title
-        {
-            width: 100%;
-            height: 100%;
-            perspective: 1000px;
-            position: fixed;
-            top: 0;
-            z-index: 10;
-        }
+.title
+{
+    width: 100%;
+    height: 100%;
+    /* 透视距离 */
+    /*perspective: none;*/
+    position: fixed;
+    top: 0;
+    z-index: 10;
+}
 
-        .title .icon-fanhui
-        {
-            display: none;
-            position: absolute;
-            top: 100px;
-            left: 10%;
-            color: #fff;
-            font-size: 50px;
-        }
+.title .icon-fanhui
+{
+    display: none;
+    position: absolute;
+    top: 100px;
+    left: 10%;
+    color: #fff;
+    font-size: 50px;
+}
 
-        .title .icon-fanhui:hover
-        {
-            text-decoration: none;
-            color: #333;
-        }
+.title .icon-fanhui:hover
+{
+    text-decoration: none;
+    color: #333;
+}
 
-        .title .title_list
-        {
-            width: 100%;
-            height: 100%;
-            margin: 0 auto;
-        }
+.title .title_list
+{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+}
 
-        .title .title_list .tab_li
-        {
-            list-style: none;
-            float: left;
-            width: 25%;
-            height: 100%;
-            line-height: 11em;
-            text-align: center;
-            font-size: 40px;
-            color: #fff;
-            overflow: hidden;
-            animation: none;
-        }
+.title .title_list .tab_li
+{
+    list-style: none;
+    float: left;
+    width: 25%;
+    height: 100%;
+    line-height: 11em;
+    text-align: center;
+    font-size: 40px;
+    color: #fff;
+    overflow: hidden;
+    animation: none;
+    box-shadow: 0 0 30px 1px #000;
+}
 
-        .title .title_list .tab_li .li_icon
-        {
-            display: block;
-            font-size: 80px;
-        }
+.title .title_list .tab_li .li_icon
+{
+    display: block;
+    font-size: 80px;
+}
 
-        .title .title_list .tab_li a
-        {
-            color: #fff;
-        }
+.title .title_list .tab_li a
+{
+    color: #fff;
+}
 
-        .title .title_list .tab_li a:hover + .li_icon
-        {
-            transform: rotateY(360deg);
-            transition: transform 1s ease;
-        }
+.title .title_list .tab_li a:hover + .li_icon
+{
+    transform: rotateY(360deg);
+    transition: transform 1s ease;
+}
 
-        .title .title_list .tab_li1 {  background-color: #EF476F;  }
-        .title .title_list .tab_li2 {  background-color: #FFD166;  }
-        .title .title_list .tab_li3 {  background-color: #06D6A0;  }
-        .title .title_list .tab_li4 {  background-color: #00DAE5;  }
+.title .title_list .tab_li1 {  background-color: #EF476F;  }
+.title .title_list .tab_li2 {  background-color: #FFD166;  }
+.title .title_list .tab_li3 {  background-color: #06D6A0;  }
+.title .title_list .tab_li4 {  background-color: #00DAE5;  }
 
-        .content
-        {
-            margin-top: 200px;
-        }
+.content
+{
+    margin-top: 200px;
+}
 
-        .content .content_lists .content_li
-        {
-            display: none;
-            width: 100%;
-            opacity: .9;
-        }
+.content .content_lists .content_li
+{
+    display: none;
+    width: 100%;
+    opacity: .9;
+}
+
+#music
+{
+    height: 300px;
+}
