--- a/css/section_style.css
+++ b/css/section_style.css
@@ -38,15 +38,16 @@
 {
     display: block;
     width: 100%;
+    height: 100%;
     overflow: hidden;
     background-color: #aef0ff;
-    background-size: 100% 100%;
 }
 
 .style-block .s_lists .s_list .s_list_cover .s_bg
 {
     display: block;
     width: 100%;
+    height: 100%;
 }
 
 .style-block .s_lists .s_list .s_name
@@ -62,16 +63,16 @@
     transition: height .3s ease-in-out;
 }
 
-.style-block .s_lists .s_list .s_name p
-{
-    padding: 0 5%;
-}
-
 .style-block .s_lists .s_list:hover .s_name
 {
     height: 60px;
     transition: height .3s ease-in-out;
     text-decoration: underline !important;
+}
+
+.style-block .s_lists .s_list .s_name p
+{
+    padding: 0 5%;
 }
 
 /* 方块目录排版 end */
